빌더의 속성과 스코프의 부모 자식 관계

--- a/코틀린 프로그래밍 기본 2/5단원. 동시성 프로그래밍.md
+++ b/코틀린 프로그래밍 기본 2/5단원. 동시성 프로그래밍.md
@@ -83,6 +83,7 @@ Thread {
 ```
 
 ### newFixedThreadPool()
+
 - 자주 재사용되는 스레드를 이용하기 위해 미리 생성된 스레드풀에서 스레드 이용
 - 예) 8개의 스레드로 특정 백그라운드 서비스를 하도록 만든다고 했을 때
 
@@ -94,29 +95,36 @@ Thread {
 - 코루틴은 문맥 교환 없이 해당 루틴을 일시 중단을 통해 제어
 
 ### launch
+
 - 일단 실행하고 잊어버리는 형태의 코루틴으로 메인 프로그램과 독립되어 실행할 수 있다.
 - 기본적으로 즉시 실행하며 블록 내의 실행 결과는 반환하지 않는다.
 - 상위 코드를 블록 시키지 않고 관리를 위한 Job 객체를 즉시 반환한다.
 
 ### async
+
 - Deffered를 통해 결과를 반환하며 await을 통해 받을 수 있다.
 
 ### suspend
+
 - 코루틴 내부에서 사용할 수 있는 지연함수
 - 컴파일러는 suspend가 붙은 함수를 자동적으로 추출해 `Continuation` 클래스로부터 분리된 루틴을 만든다.
 
 ### Job
+
 - 백그라운드에서 실행하는 작업
 - 코루틴의 생명주기를 관리하며 생성된 코루틴 작업들은 부모-자식과 같은 관계를 가질 수 있다.
 
 ### Job 규칙
+
 - 부모가 취소되거나 실행 실패하면 그 하위 자식들은 모두 취소된다.
 - 자식의 실패는 그 부모에 전달되며 부모 또한 실패한다. (다른 모든 자식도 취소됨)
 
 ### SupervisorJob
+
 - 자식의 실패가 그 부모나 다른 자식에 전달되지 않으므로 실행을 유지할 수 있다.
 
 ### join() 결과 기다리기
+
 ```kotlin
 fun main() = runBlocking<Unit> {
     val job = launch { // Job의 객체를 반환
@@ -129,10 +137,12 @@ fun main() = runBlocking<Unit> {
 ```
 
 ### 중단
+
 - delay: 일정 시간 지연(넌블로킹)하며 중단
 - yield(): 특정 값을 산출하기 위한 중단
 
 ### 취소
+
 - Job.cancel(): 지정된 코루틴 작업을 즉시 취소
 - Job.cancelAndJoin(): 완료 시까지 기다리고 취소
 - 부모 블록이 취소되면 모든 자식 코루틴이 취소된다.
@@ -145,32 +155,40 @@ fun main() = runBlocking<Unit> {
 ---
 
 ### 동시성 처리를 위한 async 코루틴
+
 - launch와 다른 점은 Deferred<T> 를 통해 결과값을 반환
 - 지연된 결과 값을 받기 위해 `await()`를 사용
 
 ---
 
 ### Coroutine Context
+
 - 코루틴을 실행하기 위한 다양한 설정값을 가진 관리 정보
-  - 코루틴 이름, 디스패처, 작업 상세사항, 예외 핸들러 등
+    - 코루틴 이름, 디스패처, 작업 상세사항, 예외 핸들러 등
 - 디스패처는 코루틴 문맥을 보고 어떤 스레드에서 실행되고 있는 지 식별이 가능해진다.
 - 코루틴 문맥은 + 연산을 통해 조합될 수 있다.
 
 ### CoroutineName
+
 - 코루틴에 이름을 주며 **디버깅**을 위해서 사용됨
+
 ```kotlin
 val someCoroutineName = CoroutineName("코루틴1")
 ```
 
 ### Job
+
 - 작업 객체를 지정할 수 있으며 취소 가능 여부에 따라 `SupervisorJob()` 사용
+
 ```kotlin
 val parentJob = SupervisorJob()
 val someJob = Job(parentJob)
 ```
 
 ### CoroutineDispatcher
+
 - Dispatchers.Default, ...IO, 등을 지정할 수 있으며 필요에 따라 스레드를 생성 가능
+
 ```kotlin
 val myPool = Executors.newFixedThreadPool(2).asCoroutineDispatcher(0)
 ```
@@ -178,11 +196,49 @@ val myPool = Executors.newFixedThreadPool(2).asCoroutineDispatcher(0)
 ## 코루틴의 스코프
 
 ### GlobleScope
+
 - 독립형(Standalone) 코루틴을 구성, 생명주기는 프로그램 전체(top-level)에 해당하는 범위를 가지며 main의 생명 주기가 끝나면 같이 종료됨
 - Dispatchers.Unconfined와 함께 작업이 서로 무관한 전역 범위 실행
 - 보통 GlobalScope상에서는 launch나 async 사용이 권장되지 않음
 
 ### CoroutineScope
+
 - 특정 목적의 디스패처를 지정한 범위를 블록으로 구성할 수 있다.
 - 모든 코루틴 빌더는 CoroutineScope의 인스턴스를 갖는다.
-- launch {..} 와 같이 인자가 없는 경우 CoroutineScope에서 상위의 문맥이 상속되어 결정 (부모 자식 관계라면 부모의 문맥을 따라가고, 부모가 없으면 Default 사용 - GlobalScope의 문맥과 동일)
+- launch {..} 와 같이 인자가 없는 경우 CoroutineScope에서 상위의 문맥이 상속되어 결정 (부모 자식 관계라면 부모의 문맥을 따라가고, 부모가 없으면 Default 사용 -
+  GlobalScope의 문맥과 동일)
+
+### 스레드풀 사용
+
+- 이미 초기화되어 있는 스레드 중 하나 혹은 그 이상이 선택되며 초기화하기 때문에 스레드를 생성하는 오버헤드가 없어 빠름
+
+GlobalScope에서 실행하면 부모 job의 영향을 받지 않고 프로그램 전역으로 독립적으로 실행한다.
+
+```kotlin
+runBlocking {
+    GlobalScope.launch {
+
+    }
+    delay(1000)
+}
+```
+위와 같이 runBlocking 내부에 GlobalScope를 사용하게 되면 부모와 무관하게 독립적으로 실행되기 때문에 기다리지 않는다.
+
+### start() 혹은 await()가 호출될 때 실제로 시작
+- launch나 async는 즉시 실행되지만 start 옵션에 따라 실행시점을 늦출 수 있다.
+```kotlin
+val job = async(start = CoroutineStart.LAZY) { doWork1() }
+  ...
+job.start()
+```
+
+- 안드로이드의 버튼을 통한 시작 예
+```kotlin
+val someJob = launch(start = CoroutineStart.LAZY) {
+    // some code //
+}
+  ...
+someButton.setOnClickListener {
+    someJob.start()
+}
+```
