블로킹과 문맥 변환

--- a/코틀린 프로그래밍 기본 2/5단원. 동시성 프로그래밍.md
+++ b/코틀린 프로그래밍 기본 2/5단원. 동시성 프로그래밍.md
@@ -242,3 +242,25 @@ someButton.setOnClickListener {
     someJob.start()
 }
 ```
+
+---
+
+### runBlocking의 사용
+
+- 새로운 코루틴을 시행하고 완료되기 전까지는 현재(caller) 스레드를 블로킹
+- 코루틴 빌더와 마찬가지로 CoroutineScope의 인스턴스를 가짐
+
+### withContext()
+- 인자로 코루틴 문맥을 지정하며 해당 문맥에 따라 코드 블록을 실행
+- 해당 코드 블록은 다른 스레드에서 수행되며 결과를 반환한다.
+- 부모 스레드를 블록하지 않는다.
+
+### coroutineScope 빌더
+- 자신만의 코루틴 스코프를 선언하고 생성할 수 있다.
+- 모든 자식이 완료되기 전까지는 생성된 코루틴 스코프는 종료되지 않는다.
+- `runBlocking`과 유사하지만 `runBlocking`은 단순 함수로 현재 스레드를 블로킹, `coroutineScope`는 단순히 지연 함수 형태로 넌블로킹으로 사용됨
+- 만일 자식 코루틴이 실패하면 이 스코프도 실패하고 남은 모든 자식은 취소된다. (반면에 supervisorScope는 실패하지 않음)
+  - 외부에 의해 작업이 취소되는 경우 `CancellationException` 발생
+
+### 실행 시간 제한
+- withTimeout / withTimeoutOrNull : 특정 시간 값 동안만 수행하고 블록을 끝냄. 예외를 발생시킬 수도 있고 null 값을 반환시킬 수도 있다.
