Update 3단원. 제네릭과 배열.md

--- a/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
+++ b/코틀린 프로그래밍 기본 2/3단원. 제네릭과 배열.md
@@ -86,7 +86,7 @@ fun main(args: Array<String>) {
 - 하위 클래스의 자료형을 상위 클래스의 자료형이 이용
 
 ```kotlin
-class Box<out T>(val size: Int)
+class Box<in T>(val size: Int)
 
 fun main(args: Array<String>) {
     val anys: Box<Any> = Box<Int>(10) // 자료형 불일치 오류
