--- a/코틀린 프로그래밍 기본 2/4단원. 컬렉션.md
+++ b/코틀린 프로그래밍 기본 2/4단원. 컬렉션.md
@@ -204,3 +204,23 @@ println(listDefault)
 // filter: 9
 // [4]
 ```
+
+```kotlin
+val list = listOf(1, 2, 3)
+val listDefault = list.asSequence()
+        .map {
+            println("map: $it")
+            it * it
+        }.filter {
+            println("filter: $it")
+            it % 2 == 0
+        }.toList()
+println(listDefault)
+// map: 1
+// filter: 1
+// map: 2
+// filter: 4
+// map: 3
+// filter: 9
+// [4]
+```
